# Google_ADK_Sample

./: .env.example  .gitignore  README.md  pyproject.toml
web/: __init__.py  agent.py  search_tool.py
